--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,12 @@
     "mongoose": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.4",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^2.0.2",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
