--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Mahek Gupta",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
